--- a/Interplanetary/Interplanetary/Base.lproj/Main.storyboard
+++ b/Interplanetary/Interplanetary/Base.lproj/Main.storyboard
@@ -12,14 +12,14 @@
         <!--Favorites View Controller-->
         <scene sceneID="hTk-TH-OJV">
             <objects>
-                <viewController storyboardIdentifier="FavoritesViewController" id="W4K-RL-O93" customClass="FavoritesViewController" customModule="Interplanetary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="FavoritesViewController" id="W4K-RL-O93" customClass="FavoritesViewController" customModule="_1a550b461ee42a4f603af04f85c93da" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2JJ-GL-Ems">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="Yvj-Df-bXa">
                                 <rect key="frame" x="0.0" y="59" width="393" height="759"/>
-                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </tableView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6gp-2c-TVu"/>
@@ -43,7 +43,7 @@
         <!--Home View Controller-->
         <scene sceneID="nfH-me-DLQ">
             <objects>
-                <viewController storyboardIdentifier="HomeViewController" id="Fkl-M0-RZ9" customClass="HomeViewController" customModule="Interplanetary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" id="Fkl-M0-RZ9" customClass="HomeViewController" customModule="_1a550b461ee42a4f603af04f85c93da" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8Sm-S7-G8c">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -56,7 +56,7 @@
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="apG-8I-NmF">
                                                 <rect key="frame" x="0.0" y="0.0" width="393" height="50"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="50" id="niR-k1-0Jw"/>
                                                 </constraints>
@@ -97,7 +97,7 @@
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="bottom" secondItem="ddR-y5-cpm" secondAttribute="bottom" id="5B1-qi-bgF"/>
                                                     <constraint firstAttribute="height" constant="25" id="OnJ-Qd-EvV"/>
@@ -108,7 +108,7 @@
                                             </view>
                                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="4ad-xL-ezU">
                                                 <rect key="frame" x="0.0" y="105" width="393" height="250"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="250" id="BIV-7g-lE8"/>
                                                 </constraints>
@@ -122,7 +122,7 @@
                                             </collectionView>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="stA-5G-ahn">
                                                 <rect key="frame" x="0.0" y="355" width="393" height="351.66666666666674"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Cme-EQ-YxO">
                                                 <rect key="frame" x="0.0" y="706.66666666666663" width="393" height="52.333333333333371"/>
@@ -134,7 +134,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="Ufm-SK-Jdw" secondAttribute="trailing" constant="16" id="GGR-kx-3vE"/>
                                                     <constraint firstItem="Ufm-SK-Jdw" firstAttribute="leading" secondItem="Cme-EQ-YxO" secondAttribute="leading" constant="16" id="VN3-if-Zmi"/>
@@ -184,7 +184,7 @@
         <!--Landing View Controller-->
         <scene sceneID="T8l-CX-AI7">
             <objects>
-                <viewController storyboardIdentifier="LandingViewController" id="rgJ-eQ-ADq" customClass="LandingViewController" customModule="Interplanetary" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="LandingViewController" id="rgJ-eQ-ADq" customClass="LandingViewController" customModule="_1a550b461ee42a4f603af04f85c93da" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="5MN-Eg-08Z">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -205,7 +205,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="FmB-0S-3Fd" secondAttribute="trailing" constant="16" id="VKO-9v-deA"/>
                                                     <constraint firstItem="FmB-0S-3Fd" firstAttribute="top" secondItem="qzZ-Zc-Wtr" secondAttribute="top" constant="16" id="aJZ-JU-gdn"/>
@@ -222,7 +222,7 @@
                                                         <textInputTraits key="textInputTraits"/>
                                                     </textField>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstAttribute="trailing" secondItem="1x3-sg-6wU" secondAttribute="trailing" constant="16" id="8AC-zs-AoN"/>
                                                     <constraint firstAttribute="height" constant="50" id="EYp-Sw-cog"/>
@@ -231,21 +231,21 @@
                                                     <constraint firstItem="1x3-sg-6wU" firstAttribute="leading" secondItem="5Dw-uQ-1hf" secondAttribute="leading" constant="16" id="hTC-4F-24m"/>
                                                 </constraints>
                                             </view>
-                                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="393" placeholderIntrinsicHeight="50" translatesAutoresizingMaskIntoConstraints="NO" id="rr6-jO-gUq" customClass="DynamicSlider" customModule="Interplanetary" customModuleProvider="target">
+                                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="393" placeholderIntrinsicHeight="50" translatesAutoresizingMaskIntoConstraints="NO" id="rr6-jO-gUq" customClass="DynamicSlider" customModule="_1a550b461ee42a4f603af04f85c93da" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="178.00000000000003" width="393" height="364.66666666666674"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
-                                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="393" placeholderIntrinsicHeight="50" translatesAutoresizingMaskIntoConstraints="NO" id="gKx-nD-z7Y" customClass="DynamicSlider" customModule="Interplanetary" customModuleProvider="target">
+                                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="393" placeholderIntrinsicHeight="50" translatesAutoresizingMaskIntoConstraints="NO" id="gKx-nD-z7Y" customClass="DynamicSlider" customModule="_1a550b461ee42a4f603af04f85c93da" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="542.66666666666663" width="393" height="50"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
-                                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="393" placeholderIntrinsicHeight="50" translatesAutoresizingMaskIntoConstraints="NO" id="Z0k-UU-jc9" customClass="DynamicSlider" customModule="Interplanetary" customModuleProvider="target">
+                                            <view contentMode="scaleToFill" placeholderIntrinsicWidth="393" placeholderIntrinsicHeight="50" translatesAutoresizingMaskIntoConstraints="NO" id="Z0k-UU-jc9" customClass="DynamicSlider" customModule="_1a550b461ee42a4f603af04f85c93da" customModuleProvider="target">
                                                 <rect key="frame" x="0.0" y="592.66666666666663" width="393" height="50"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Fa4-Mm-Hgn">
                                                 <rect key="frame" x="0.0" y="642.66666666666663" width="393" height="50"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xwE-mm-Okh">
                                                 <rect key="frame" x="0.0" y="692.66666666666663" width="393" height="66.333333333333371"/>
@@ -259,7 +259,7 @@
                                                         </connections>
                                                     </button>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <constraints>
                                                     <constraint firstItem="cuE-Se-L2J" firstAttribute="leading" secondItem="xwE-mm-Okh" secondAttribute="leading" constant="16" id="F3E-fT-DQF"/>
                                                     <constraint firstAttribute="trailing" secondItem="cuE-Se-L2J" secondAttribute="trailing" constant="16" id="jaC-vg-Vzt"/>
@@ -306,7 +306,7 @@
         <!--Main Tabs View Controller-->
         <scene sceneID="J2y-gY-Of3">
             <objects>
-                <tabBarController storyboardIdentifier="MainTabsViewController" id="1i7-FZ-9zm" customClass="MainTabsViewController" customModule="Interplanetary" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="MainTabsViewController" id="1i7-FZ-9zm" customClass="MainTabsViewController" customModule="_1a550b461ee42a4f603af04f85c93da" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="C4g-g4-njC">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
